--- a/src/mail/2ICancelled.html
+++ b/src/mail/2ICancelled.html
@@ -12,7 +12,7 @@
         padding: 0;
         font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
           Arial, sans-serif;
-
+min-height: 100vh;
         padding: 20px;
       }
 
@@ -45,7 +45,7 @@
       .logo {
         width: 80px;
         height: 80px;
-        
+        background-color: white;
         border-radius: 20px;
         margin: 0 auto 20px;
         display: flex;
