--- a/src/mail/5password.html
+++ b/src/mail/5password.html
@@ -11,7 +11,6 @@
             margin: 0;
             padding: 0;
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
-
             min-height: 100vh;
             padding: 20px;
         }
@@ -52,6 +51,7 @@
             width: 80px;
             height: 80px;
             border-radius: 20px;
+            background-color: white;
             margin: 0 auto 20px;
             display: flex;
             align-items: center;
