fix(mail-templates): update company name and details in email templates
Standardize footer copyright text across all email templates to use TalentOS branding
Replace placeholder values with actual contact details and interview information
Fix indentation and formatting issues in 2ICancelled.html template

--- a/src/mail/2ICancelled.html
+++ b/src/mail/2ICancelled.html
@@ -12,7 +12,7 @@
         padding: 0;
         font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
           Arial, sans-serif;
-min-height: 100vh;
+        min-height: 100vh;
         padding: 20px;
       }
 
@@ -176,19 +176,25 @@ min-height: 100vh;
     <div class="container">
       <!-- Header -->
       <div class="header">
-         <div class="logo"><img src="https://cdn-icons-png.freepik.com/512/5968/5968374.png?uid=R165505067&ga=GA1.1.701570569.1719990316" alt="${PROJECT_NAME}" style="width: 60px; height: 60px; "></div>
+        <div class="logo">
+          <img
+            src="https://cdn-icons-png.freepik.com/512/5968/5968374.png?uid=R165505067&ga=GA1.1.701570569.1719990316"
+            alt="logo"
+            style="width: 60px; height: 60px"
+          />
+        </div>
         <h1>Interview Update</h1>
         <p>Important notice regarding your scheduled interview</p>
       </div>
 
       <!-- Content -->
       <div class="content">
-        <p class="greeting">Hello, <strong>[Candidate Name]</strong> 👋</p>
+        <p class="greeting">Hello, <strong>${*******}</strong> 👋</p>
 
         <p class="message">
           We hope you're doing well. We wanted to inform you that your upcoming
           interview for the position of
-          <strong>[Job Title]</strong> has been <strong>cancelled</strong> due
+          <strong>${*******}</strong> has been <strong>cancelled</strong> due
           to some unforeseen circumstances. We sincerely apologize for any
           inconvenience this may cause.
         </p>
@@ -213,13 +219,20 @@ min-height: 100vh;
 
         <p class="closing">
           We truly appreciate your interest in joining
-          <strong>[Company Name]</strong>. Our recruitment team will reach out
+          <strong>${*******}</strong>. Our recruitment team will reach out
           to you once your new schedule is confirmed.
         </p>
 
         <p class="signature">
-          Best regards,<br />
-          <strong>The [Company Name] Recruitment Team </strong>
+           Best wishes,
+                <br>
+                HR: Darshan Talaviya  
+                <br>
+                TalentOS (1.0.0)
+                <br>
+                Ahmedabad,Gujarat,India
+                <br>
+                Monday, Jan 15, 2025
         </p>
       </div>
 
@@ -229,15 +242,34 @@ min-height: 100vh;
           This is an automated message – please do not reply directly to this
           email. For any questions, contact our support team.
         </p>
-         <div class="social-icons">
-                <a href="[FACEBOOK_URL]"><img src="https://cdn-icons-png.freepik.com/512/2626/2626270.png?uid=R165505067&ga=GA1.1.701570569.1719990316" alt="Facebook" style="width: 40px; height: 40px;"></a>
-                <a href="[TWITTER_URL]"><img src="https://cdn-icons-png.freepik.com/512/15707/15707753.png?uid=R165505067&ga=GA1.1.701570569.1719990316" alt="Twitter" style="width: 40px; height: 40px;"></a>
-                <a href="[LINKEDIN_URL]"><img src="https://cdn-icons-png.freepik.com/512/733/733609.png?uid=R165505067&ga=GA1.1.701570569.1719990316" alt="LinkedIn" style="width: 40px; height: 40px;"></a>
-                <a href="[INSTAGRAM_URL]"><img src="https://cdn-icons-png.freepik.com/512/13077/13077796.png?uid=R165505067&ga=GA1.1.701570569.1719990316" alt="Instagram" style="width: 40px; height: 40px;"></a>
-               
-            </div>
+        <div class="social-icons">
+          <a href="[FACEBOOK_URL]"
+            ><img
+              src="https://cdn-icons-png.freepik.com/512/2626/2626270.png?uid=R165505067&ga=GA1.1.701570569.1719990316"
+              alt="Facebook"
+              style="width: 40px; height: 40px"
+          /></a>
+          <a href="[TWITTER_URL]"
+            ><img
+              src="https://cdn-icons-png.freepik.com/512/15707/15707753.png?uid=R165505067&ga=GA1.1.701570569.1719990316"
+              alt="Twitter"
+              style="width: 40px; height: 40px"
+          /></a>
+          <a href="[LINKEDIN_URL]"
+            ><img
+              src="https://cdn-icons-png.freepik.com/512/733/733609.png?uid=R165505067&ga=GA1.1.701570569.1719990316"
+              alt="LinkedIn"
+              style="width: 40px; height: 40px"
+          /></a>
+          <a href="[INSTAGRAM_URL]"
+            ><img
+              src="https://cdn-icons-png.freepik.com/512/13077/13077796.png?uid=R165505067&ga=GA1.1.701570569.1719990316"
+              alt="Instagram"
+              style="width: 40px; height: 40px"
+          /></a>
+        </div>
         <p class="footer-text" style="margin-top: 20px">
-            © ${PROJECT_LONCHE_YEAR} <strong>${PROJECT_NAME}</strong> ${PROJECT_VERSION}. All rights reserved. Developed by <strong>${DEVLOPER_NAME}</strong>.
+            © Copyright 2025 <strong>TalentOS</strong>.1.0.0 All rights reserved. Read our Privacy Policy
         </p>
       </div>
     </div>
