--- a/src/mail/4offer.html
+++ b/src/mail/4offer.html
@@ -313,7 +313,7 @@
           /></a>
         </div>
         <p class="footer-text" style="margin-top: 20px">
-          © 2025 <strong>[Company Name]</strong>. All rights reserved.
+           © Copyright 2025 <strong>TalentOS</strong>.1.0.0 All rights reserved. Read our Privacy Policy
         </p>
       </div>
     </div>
