--- a/src/mail/5password.html
+++ b/src/mail/5password.html
@@ -380,7 +380,7 @@
             </div>
             
             <p class="footer-text" style="margin-top: 25px;">
-                © ${PROJECT_LONCHE_YEAR} <strong>${PROJECT_NAME}</strong> ${PROJECT_VERSION}. All rights reserved. Developed by <strong>${DEVLOPER_NAME}</strong>.
+                © Copyright 2025 <strong>TalentOS</strong>.1.0.0 All rights reserved. Read our Privacy Policy
             </p>
         </div>
     </div>
