--- a/src/mail/6rejectcendidate.html
+++ b/src/mail/6rejectcendidate.html
@@ -230,7 +230,7 @@
                
             </div>
       <p class="footer-text" style="margin-top: 20px;">
-        © 2025 <strong>[Company Name]</strong>. All rights reserved.
+        © Copyright 2025 <strong>TalentOS</strong>.1.0.0 All rights reserved. Read our Privacy Policy
       </p>
     </div>
   </div>
